option('with-gtk', type: 'combo', choices: ['3.0', '3.90', '3.92', '3.94', '3.96', '3.98'], value: '3.0', description: 'which gtk+ version to compile against')
option('enable-glade-catalogue', type: 'boolean', value: true, description: 'enable installing the glade catalogue')
option('enable-vala', type: 'boolean', value: true, description: 'build Vala bindings')
option('enable-Bsymbolic', type: 'combo', choices: ['yes', 'no', 'auto'], value: 'auto', description: 'enable linking with -Bsymbolic')
option('enable-gnutls', type: 'boolean', value: true, description: 'enable gnutls support')
option('enable-gtk-doc', type: 'boolean', value: false, description: 'use gtk-doc to build documentation')
option('enable-introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection (depends on GObject)')
option('enable-test-application', type: 'boolean', value: true, description: 'enable installing the vala test application')
